--- a/StephensVisioncast_Unity/Packages/AI/package.json
+++ b/StephensVisioncast_Unity/Packages/AI/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.gg.rpg.ai",
+  "name": "com.stephens.ai",
   "version": "1.0.0",
   "displayName": "AI",
   "description": "AI package.",
