--- a/StephensVisioncast_Unity/Packages/Camera/package.json
+++ b/StephensVisioncast_Unity/Packages/Camera/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.gg.rpg.camera",
+  "name": "com.stephens.camera",
   "version": "1.0.0",
   "displayName": "Camera",
   "description": "Package for basic camera functionality.",
