--- a/StephensVisioncast_Unity/Packages/Player/package.json
+++ b/StephensVisioncast_Unity/Packages/Player/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.gg.rpg.player",
+  "name": "com.stephens.player",
   "version": "1.0.0",
   "displayName": "Player",
   "description": "Player package.",
