--- a/StephensVisioncast_Unity/Packages/Sensors/package.json
+++ b/StephensVisioncast_Unity/Packages/Sensors/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.gg.rpg.sensors",
+  "name": "com.stephens.sensors",
   "version": "1.0.0",
   "displayName": "Sensors",
   "description": "Sensors package.",
