--- a/StephensVisioncast_Unity/Packages/Tick/package.json
+++ b/StephensVisioncast_Unity/Packages/Tick/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.gg.rpg.tick",
+  "name": "com.stephens.tick",
   "version": "1.0.0",
   "displayName": "Tick",
   "description": "Ticking utility.",
