--- a/StephensVisioncast_Unity/Packages/Utility/package.json
+++ b/StephensVisioncast_Unity/Packages/Utility/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.gg.rpg.utility",
+  "name": "com.stephens.utility",
   "version": "1.0.0",
   "displayName": "Utility",
   "description": "Utility scripts.",
