--- a/StephensVisioncast_Unity/Assets/KinematicCharacterController/Core/Asset.KCC.asmdef
+++ b/StephensVisioncast_Unity/Assets/KinematicCharacterController/Core/Asset.KCC.asmdef
@@ -3,8 +3,7 @@
     "rootNamespace": "",
     "references": [
         "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner",
-        "Core.Utility"
+        "UnityEditor.TestRunner"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
