--- a/StephensVisioncast_Unity/Packages/Input/package.json
+++ b/StephensVisioncast_Unity/Packages/Input/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.gg.rpg.input",
+  "name": "com.stephens.input",
   "version": "1.0.0",
   "displayName": "Input",
   "description": "Package for basic input functionality.",
