--- a/StephensVisioncast_Unity/Assets/KinematicCharacterController/Core/Editor/Asset.KCC.Editor.asmdef
+++ b/StephensVisioncast_Unity/Assets/KinematicCharacterController/Core/Editor/Asset.KCC.Editor.asmdef
@@ -1,14 +1,16 @@
 {
-    "name": "Asset.KCC",
+    "name": "Asset.KCC.Editor",
     "rootNamespace": "",
-    "references": [],
-    "includePlatforms": [],
+    "references": [
+        "GUID:f4acb893c1f7a4389b654c4f95094bc8"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
-    "precompiledReferences": [
-        "nunit.framework.dll"
-    ],
+    "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
