--- a/StephensVisioncast_Unity/Packages/Camera/Runtime/Stephens.Camera.asmdef
+++ b/StephensVisioncast_Unity/Packages/Camera/Runtime/Stephens.Camera.asmdef
@@ -10,9 +10,7 @@
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
-    "precompiledReferences": [
-        "nunit.framework.dll"
-    ],
+    "precompiledReferences": [],
     "autoReferenced": false,
     "defineConstraints": [],
     "versionDefines": [],
