--- a/StephensVisioncast_Unity/Packages/Utility/Runtime/Stephens.Utility.asmdef
+++ b/StephensVisioncast_Unity/Packages/Utility/Runtime/Stephens.Utility.asmdef
@@ -14,9 +14,7 @@
         "nunit.framework.dll"
     ],
     "autoReferenced": true,
-    "defineConstraints": [
-        "UNITY_INCLUDE_TESTS"
-    ],
+    "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
 }
