--- a/StephensVisioncast_Unity/Packages/manifest.json
+++ b/StephensVisioncast_Unity/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.inputsystem": "1.8.0-pre.2",
     "com.unity.render-pipelines.universal": "17.0.2",
     "com.unity.test-framework": "1.4.3",
+    "com.unity.textmeshpro": "3.0.7",
     "com.unity.timeline": "1.8.6",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.1",
